--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
         .final-rating-box { background:#f1c40f; color:#0f172a; padding:35px; border-radius:25px; margin-top:50px; border:5px solid #ffffff; }
         .mini-select { background: #0f172a; color: white; border: 1px solid #f1c40f; padding: 8px; border-radius: 8px; }
         .mini-rate-btn { background: #0f172a; color: white; border: none; padding: 12px 30px; border-radius: 10px; font-weight: bold; cursor: pointer; margin-top: 10px; }
+        /* სვაიაკის სტილები */
+        .swayaki-box { background: white; color: #1e293b; margin-bottom: 15px; border-radius: 12px; display: flex; align-items: stretch; overflow: hidden; border: 1px solid #e2e8f0; text-align: left; box-shadow: 0 4px 6px rgba(0,0,0,0.1); }
+        .swayaki-pts { background: #f1f5f9; color: #ef4444; width: 65px; display: flex; align-items: center; justify-content: center; font-size: 1.6rem; font-weight: 800; border-right: 2px solid #e2e8f0; }
+        .swayaki-content { padding: 20px; flex: 1; }
     </style>
 </head>
 <body>
@@ -163,33 +167,50 @@
             container.innerHTML = "";
             let qList = activePkgData.filter(r => r[0] && r[0].toString().trim() === num.toString());
             
+            const isSwayaki = currentPkgObj.title.toLowerCase().includes("სვაიაკი");
+            let swayakiCount = 0;
+
             qList.forEach((row) => {
                 let fullText = (row[1] || "").trim();
                 let ans = row[2] || "";
                 
-                // ინსტრუქციის განცალკევებული ლოგიკა
                 if (fullText.toLowerCase().startsWith("ინსტრუქცია:")) {
                     const instrDiv = document.createElement('div');
                     instrDiv.className = 'instr-header';
                     instrDiv.innerHTML = `📢 ${fullText}`;
                     container.appendChild(instrDiv);
-                    return; // წყვეტს ამ ხაზის დამუშავებას, რომ თეთრი ბარათი არ შეიქმნას
+                    return;
                 }
 
-                // ჩვეულებრივი კითხვის ბარათი
-                let contentHtml = fullText.includes('http') ? `<img src="${fullText}" class="q-img">` : fullText;
-                const card = document.createElement('div');
-                card.className = 'question-card';
-                card.innerHTML = `
-                    <div style="font-size:1.3rem; margin-bottom:25px; color:#1e293b; font-weight:500;">${contentHtml}</div>
-                    <div class="timer-row">
-                        <button onclick="startT(this.nextElementSibling)" style="cursor:pointer; padding:10px 18px; border-radius:10px; border:none; background:#e2e8f0; font-weight:bold; color:#475569;">⏱️ ტაიმერი</button>
-                        <div class="timer-display">20</div>
-                    </div>
-                    <button class="btn-ans" onclick="this.nextElementSibling.style.display='block'; this.style.display='none'">ნახე პასუხი</button>
-                    <div class="ans-text">✅ პასუხი: ${ans}</div>
-                `;
-                container.appendChild(card);
+                if (isSwayaki) {
+                    swayakiCount++;
+                    const points = swayakiCount * 10;
+                    const sCard = document.createElement('div');
+                    sCard.className = 'swayaki-box';
+                    sCard.innerHTML = `
+                        <div class="swayaki-pts">${points}</div>
+                        <div class="swayaki-content">
+                            <div style="font-size:1.15rem; margin-bottom:12px; font-weight:500;">${fullText}</div>
+                            <button onclick="this.nextElementSibling.style.display='block'; this.style.color='#94a3b8';" style="background:none; border:none; color:#3b82f6; cursor:pointer; font-weight:bold; padding:0; font-size:1rem;">პასუხი:</button>
+                            <div style="display:none; margin-top:8px; color:#166534; font-weight:bold; font-size:1.1rem;">✅ ${ans}</div>
+                        </div>
+                    `;
+                    container.appendChild(sCard);
+                } else {
+                    let contentHtml = fullText.includes('http') ? `<img src="${fullText}" class="q-img">` : fullText;
+                    const card = document.createElement('div');
+                    card.className = 'question-card';
+                    card.innerHTML = `
+                        <div style="font-size:1.3rem; margin-bottom:25px; color:#1e293b; font-weight:500;">${contentHtml}</div>
+                        <div class="timer-row">
+                            <button onclick="startT(this.nextElementSibling)" style="cursor:pointer; padding:10px 18px; border-radius:10px; border:none; background:#e2e8f0; font-weight:bold; color:#475569;">⏱️ ტაიმერი</button>
+                            <div class="timer-display">20</div>
+                        </div>
+                        <button class="btn-ans" onclick="this.nextElementSibling.style.display='block'; this.style.display='none'">ნახე პასუხი</button>
+                        <div class="ans-text">✅ პასუხი: ${ans}</div>
+                    `;
+                    container.appendChild(card);
+                }
             });
 
             if (num === 4 && currentPkgObj) {
