--- a/index.html
+++ b/index.html
@@ -162,4 +162,57 @@
                 if (fullText.toLowerCase().startsWith("ინსტრუქცია:")) {
                     const instrDiv = document.createElement('div');
                     instrDiv.className = 'instr-header';
-                    instrDiv.innerHTML = `📢
+                    instrDiv.innerHTML = `📢 ${fullText}`;
+                    container.appendChild(instrDiv);
+                    return;
+                }
+
+                if (fullText.toLowerCase().startsWith("თემა:")) {
+                    const themeDiv = document.createElement('div');
+                    themeDiv.className = 'theme-header';
+                    themeDiv.innerHTML = `📂 ${fullText}`;
+                    container.appendChild(themeDiv);
+                    swayakiCount = 0; // ახალი თემისას ქულები თავიდან იწყება
+                    return;
+                }
+
+                if (isSwayaki) {
+                    swayakiCount++;
+                    const points = swayakiCount * 10;
+                    const sCard = document.createElement('div');
+                    sCard.className = 'swayaki-box';
+                    sCard.innerHTML = `<div class="swayaki-pts">${points}</div><div class="swayaki-content"><div style="font-size:1.15rem; margin-bottom:12px; font-weight:500;">${fullText}</div><button onclick="this.nextElementSibling.style.display='block'; this.style.color='#94a3b8';" style="background:none; border:none; color:#3b82f6; cursor:pointer; font-weight:bold; padding:0; font-size:1rem;">პასუხი:</button><div style="display:none; margin-top:8px; color:#166534; font-weight:bold; font-size:1.1rem;">✅ ${ans}</div></div>`;
+                    container.appendChild(sCard);
+                } else {
+                    let contentHtml = fullText.includes('http') ? `<img src="${fullText}" class="q-img">` : fullText;
+                    const card = document.createElement('div');
+                    card.className = 'question-card';
+                    card.innerHTML = `<div style="font-size:1.3rem; margin-bottom:25px; color:#1e293b; font-weight:500;">${contentHtml}</div><div class="timer-row"><button onclick="startT(this.nextElementSibling)" style="cursor:pointer; padding:10px 18px; border-radius:10px; border:none; background:#e2e8f0; font-weight:bold; color:#475569;">⏱️ ტაიმერი</button><div class="timer-display">20</div></div><button class="btn-ans" onclick="this.nextElementSibling.style.display='block'; this.style.display='none'">ნახე პასუხი</button><div class="ans-text">✅ პასუხი: ${ans}</div>`;
+                    container.appendChild(card);
+                }
+            });
+
+            if (num === 4 && currentPkgObj) {
+                container.innerHTML += `<div class="final-rating-box"><h2>🎉 დასრულდა!</h2><p>შეაფასეთ პაკეტი:</p><select id="rate-sel" class="mini-select"><option value="5">5 ⭐</option><option value="4">4 ⭐</option><option value="3">3 ⭐</option><option value="2">2 ⭐</option><option value="1">1 ⭐</option></select><br><button class="mini-rate-btn" onclick="vote(${currentPkgObj.id}, ${currentPkgObj.total_score || 0}, ${currentPkgObj.votes_count || 0}, 'rate-sel')">გაგზავნა</button></div>`;
+            }
+            window.scrollTo(0, 0);
+        };
+
+        window.vote = async function(id, tot, cnt, selId) {
+            const val = parseInt(document.getElementById(selId).value);
+            if (tot === 0 && currentPkgObj.rating > 0) tot = currentPkgObj.rating * cnt;
+            const newCount = cnt + 1;
+            const newTotal = tot + val;
+            const newRating = newTotal / newCount;
+            const { error } = await _db.from('packages').update({ total_score: newTotal, votes_count: newCount, rating: newRating }).eq('id', id);
+            if(!error) { alert("მადლობა!"); location.reload(); }
+        };
+
+        function startT(el) {
+            let s = 20; el.innerText = s;
+            const itv = setInterval(() => { s--; el.innerText = s; if(s<=0){ clearInterval(itv); el.innerText="⌛"; } }, 1000);
+        }
+        initApp();
+    </script>
+</body>
+</html>
