--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
         .controls button { padding: 12px 20px; background: #334155; border: 1px solid #f1c40f; border-radius: 10px; color: #f1c40f; font-weight: bold; cursor: pointer; margin: 5px; }
         .question-card { background: #ffffff; padding: 35px; border-radius: 25px; color: #1e293b; text-align: left; margin-bottom: 40px; box-shadow: 0 12px 30px rgba(0,0,0,0.3); border-top: 6px solid #3b82f6; }
         .instr-header { background: #6366f1; color: white; padding: 18px 25px; border-radius: 15px; font-weight: bold; margin: 20px 0; display: block; border-left: 8px solid #4338ca; text-align: left; font-size: 1.1rem; }
-        /* გამოკვეთილი თემის სათაური */
         .theme-header { background: linear-gradient(90deg, #3b82f6, #6366f1); color: white; padding: 15px 25px; border-radius: 12px; font-weight: bold; text-align: left; margin: 35px 0 20px 0; text-transform: uppercase; letter-spacing: 1px; box-shadow: 0 4px 15px rgba(59, 130, 246, 0.3); }
         .timer-row { display: flex; align-items: center; justify-content: space-between; background: #f1f5f9; padding: 15px 25px; border-radius: 18px; margin-bottom: 20px; border: 1px solid #e2e8f0; }
         .timer-display { font-size: 2rem; font-weight: 800; color: #ef4444; }
@@ -30,7 +29,7 @@
         .final-rating-box { background:#f1c40f; color:#0f172a; padding:35px; border-radius:25px; margin-top:50px; border:5px solid #ffffff; }
         .mini-select { background: #0f172a; color: white; border: 1px solid #f1c40f; padding: 8px; border-radius: 8px; }
         .mini-rate-btn { background: #0f172a; color: white; border: none; padding: 12px 30px; border-radius: 10px; font-weight: bold; cursor: pointer; margin-top: 10px; }
-        .swayaki-box { background: white; color: #1e293b; margin-bottom: 15px; border-radius: 12px; display: flex; align-items: stretch; overflow: hidden; border: 1px solid #e2e8f0; text-align: left; box-shadow: 0 4px 10px rgba(0,0,0,0.1); transition: 0.2s; }
+        .swayaki-box { background: white; color: #1e293b; margin-bottom: 15px; border-radius: 12px; display: flex; align-items: stretch; overflow: hidden; border: 1px solid #e2e8f0; text-align: left; box-shadow: 0 4px 10px rgba(0,0,0,0.1); }
         .swayaki-pts { background: #f8fafc; color: #ef4444; width: 70px; display: flex; align-items: center; justify-content: center; font-size: 1.8rem; font-weight: 900; border-right: 2px solid #e2e8f0; }
         .swayaki-content { padding: 25px; flex: 1; }
     </style>
@@ -109,10 +108,11 @@
                 cats[cName].push(pkg);
             });
             Object.keys(cats).forEach(catName => {
+                const firstPkg = cats[catName][0];
                 const card = document.createElement('div');
                 card.className = 'package-card';
                 card.onclick = () => showPackagesInCategory(catName, cats[catName]);
-                card.innerHTML = `<div style="font-size:3.5rem;">📂</div><h2>${catName}</h2><p>${cats[catName].length} პაკეტი</p>`;
+                card.innerHTML = `<div style="font-size:3.5rem; margin-bottom:10px;">${firstPkg.icon || '📂'}</div><h2 style="margin:10px 0;">${catName}</h2><p>${cats[catName].length} პაკეტი</p>`;
                 container.appendChild(card);
             });
         }
@@ -120,100 +120,4 @@
         function showPackagesInCategory(catName, pkgs) {
             document.getElementById('menu-title').innerText = `თემა: ${catName}`;
             const container = document.getElementById('menu-container');
-            container.innerHTML = `<div style="grid-column: 1/-1;"><button class="back-btn" onclick="initApp()">⬅️ უკან</button></div>`;
-            pkgs.forEach(pkg => {
-                const card = document.createElement('div');
-                card.className = 'package-card';
-                card.onclick = () => openPkg(pkg);
-                card.innerHTML = `<h3>${pkg.title}</h3><p>ავტორი: ${pkg.author_name}</p><div style="color:#f1c40f;">⭐ ${Number(pkg.rating || 0).toFixed(1)}</div>`;
-                container.appendChild(card);
-            });
-        }
-
-        window.openPkg = function(pkg) {
-            currentPkgObj = pkg;
-            document.getElementById('home-page').style.display = 'none';
-            document.getElementById('game-zone').style.display = 'block';
-            document.getElementById('pkg-name-display').innerText = pkg.title;
-            
-            // სვაიაკის შემთხვევაში ვმალავთ რაუნდებს
-            const isSwayaki = pkg.title.toLowerCase().includes("სვაიაკი");
-            document.getElementById('round-controls').style.display = isSwayaki ? 'none' : 'block';
-
-            Papa.parse(pkg.csv_url, { download: true, complete: (res) => { activePkgData = res.data; filterRound(1); } });
-        };
-
-        window.filterRound = function(num) {
-            const container = document.getElementById('quiz-container');
-            container.innerHTML = "";
-            let qList = activePkgData.filter(r => r[0] && r[0].toString().trim() === num.toString());
-            const isSwayaki = currentPkgObj.title.toLowerCase().includes("სვაიაკი");
-            let swayakiCount = 0;
-
-            qList.forEach((row) => {
-                let fullText = (row[1] || "").trim();
-                let ans = row[2] || "";
-                
-                if (fullText.toLowerCase().startsWith("ინსტრუქცია:")) {
-                    container.innerHTML += `<div class="instr-header">📢 ${fullText}</div>`;
-                    return;
-                }
-                if (fullText.toLowerCase().startsWith("თემა:")) {
-                    container.innerHTML += `<div class="theme-header">📁 ${fullText}</div>`;
-                    swayakiCount = 0;
-                    return;
-                }
-                if (isSwayaki) {
-                    swayakiCount++;
-                    const points = swayakiCount * 10;
-                    container.innerHTML += `
-                        <div class="swayaki-box">
-                            <div class="swayaki-pts">${points}</div>
-                            <div class="swayaki-content">
-                                <div style="font-size:1.2rem; margin-bottom:12px; font-weight:500;">${fullText}</div>
-                                <button onclick="this.nextElementSibling.style.display='block'; this.style.color='#94a3b8';" style="background:none; border:none; color:#3b82f6; cursor:pointer; font-weight:bold; padding:0;">პასუხი:</button>
-                                <div style="display:none; margin-top:8px; color:#166534; font-weight:bold;">✅ ${ans}</div>
-                            </div>
-                        </div>`;
-                } else {
-                    let contentHtml = fullText.includes('http') ? `<img src="${fullText}" class="q-img">` : fullText;
-                    container.innerHTML += `
-                        <div class="question-card">
-                            <div style="font-size:1.3rem; margin-bottom:25px;">${contentHtml}</div>
-                            <div class="timer-row"><button onclick="startT(this.nextElementSibling)">⏱️ ტაიმერი</button><div class="timer-display">20</div></div>
-                            <button class="btn-ans" onclick="this.nextElementSibling.style.display='block'; this.style.display='none'">ნახე პასუხი</button>
-                            <div class="ans-text">✅ პასუხი: ${ans}</div>
-                        </div>`;
-                }
-            });
-
-            // სვაიაკის რეიტინგი პირდაპირ ბოლოში, ან სხვა პაკეტების რაუნდი IV-ის ბოლოს
-            if (isSwayaki || num === 4) {
-                container.innerHTML += `
-                    <div class="final-rating-box">
-                        <h2>🎉 დასრულდა!</h2>
-                        <p>შეაფასეთ პაკეტი:</p>
-                        <select id="rate-sel" class="mini-select"><option value="5">5 ⭐</option><option value="4">4 ⭐</option><option value="3">3 ⭐</option><option value="2">2 ⭐</option><option value="1">1 ⭐</option></select><br>
-                        <button class="mini-rate-btn" onclick="vote(${currentPkgObj.id}, ${currentPkgObj.total_score || 0}, ${currentPkgObj.votes_count || 0}, 'rate-sel')">გაგზავნა</button>
-                    </div>`;
-            }
-            window.scrollTo(0, 0);
-        };
-
-        window.vote = async function(id, tot, cnt, selId) {
-            const val = parseInt(document.getElementById(selId).value);
-            const newCount = cnt + 1;
-            const newTotal = tot + val;
-            const newRating = newTotal / newCount;
-            const { error } = await _db.from('packages').update({ total_score: newTotal, votes_count: newCount, rating: newRating }).eq('id', id);
-            if(!error) { alert("მადლობა!"); location.reload(); }
-        };
-
-        function startT(el) {
-            let s = 20; el.innerText = s;
-            const itv = setInterval(() => { s--; el.innerText = s; if(s<=0){ clearInterval(itv); el.innerText="⌛"; } }, 1000);
-        }
-        initApp();
-    </script>
-</body>
-</html>
+            container.innerHTML = `<div style="grid-column
